# powerfulleditor

./: CMakeLists.txt  README.md  analytics.cpp  analytics.h  animation.cpp  animation.h  audioeffect.cpp  audioeffect.h  audiomanager.cpp  audiomanager.h  audiotrack.cpp  audiotrack.h  bugreporter.cpp  bugreporter.h  effectsdialog.cpp  effectsdialog.h  effectsmanager.cpp  effectsmanager.h  exportsettings.cpp  exportsettings.h  framecache.cpp  framecache.h  gpumanager.cpp  gpumanager.h  highresprocessor.cpp  highresprocessor.h  installer.nsi  keyframe.cpp  keyframe.h  main_test.cpp  mainwindow.cpp  mainwindow.h  medialibrary.h  mediaprocessor.cpp  mediaprocessor.h  propertyinspector.h  propertywidget.h  proxymanager.cpp  proxymanager.h  texteffect.cpp  (+20 more)
